--- a/ChitChat.Backend/ChitChat.Users/package.json
+++ b/ChitChat.Backend/ChitChat.Users/package.json
@@ -6,6 +6,7 @@
 	"type": "module",
 	"scripts": {
 		"compile": "tsc",
+		"build": "npm run compile",
 		"start": "npm run compile && node ./dist/index.js"
 	},
 	"repository": {
@@ -17,6 +18,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@apollo/server": "^4.9.5",
+		"@graphql-tools/utils": "^10.0.12",
 		"dotenv": "^16.3.1",
 		"graphql": "^16.8.1"
 	},
