add security and logger properties

--- a/ChitChat.Backend/ChitChat.Users/.env.example
+++ b/ChitChat.Backend/ChitChat.Users/.env.example
@@ -1,10 +1,14 @@
 # Host
-PORT=
+PORT=4000
 
-# Firebase Config
-FIREBASE_API_KEY=
-FIREBASE_AUTH_DOMAIN=
-FIREBASE_PROJECT_ID=
-FIREBASE_STORAGE_BUCKET=
-FIREBASE_MESSAGING_SENDER_ID=
-FIREBASE_APP_ID=
+# Security
+SALT_ROUNDS=12
+
+# Logger
+LOGGER_TIMESTAMP="YYYY-MM-DD hh:mm:ss.SSS A"
+LOG_FILENAME=%DATE%.log
+LOG_DATE_PATTERN=YYYY-MM-DD
+LOG_INFO_DIRECTORY=logs/infos
+LOG_ERROR_DIRECTORY=logs/errors
+LOG_EXCEPTION_DIRECTORY=logs/exceptions
+LOGGER_MAX_FILES=14d
