--- a/ChitChat.Backend/ChitChat.Users/package.json
+++ b/ChitChat.Backend/ChitChat.Users/package.json
@@ -19,13 +19,16 @@
 	"dependencies": {
 		"@apollo/server": "^4.9.5",
 		"@graphql-tools/utils": "^10.0.12",
+		"bcrypt": "^5.1.1",
 		"dotenv": "^16.3.1",
-		"firebase": "^10.7.1",
+		"firebase-admin": "^12.0.0",
 		"graphql": "^16.8.1",
+		"jsonwebtoken": "^9.0.2",
 		"winston": "^3.11.0",
 		"winston-daily-rotate-file": "^4.7.1"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^20.10.6",
 		"typescript": "^5.3.3"
 	}
