--- a/ChitChat.Backend/ChitChat.Users/package.json
+++ b/ChitChat.Backend/ChitChat.Users/package.json
@@ -20,12 +20,15 @@
 		"@apollo/server": "^4.9.5",
 		"@graphql-tools/utils": "^10.0.12",
 		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
 		"firebase-admin": "^12.0.0",
 		"graphql": "^16.8.1",
 		"winston": "^3.11.0",
 		"winston-daily-rotate-file": "^4.7.1"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.17",
+		"@types/express": "^4.17.21",
 		"@types/node": "^20.10.6",
 		"typescript": "^5.3.3"
 	}
