--- a/ChitChat.Frontend/tsconfig.json
+++ b/ChitChat.Frontend/tsconfig.json
@@ -25,6 +25,7 @@
             "@components/*": ["src/components/*"],
             "@consts/*": ["src/consts/*"],
             "@containers/*": ["src/containers/*"],
+            "@graphql/*": ["src/graphql/*"],
             "@pages/*": ["src/pages/*"],
             "@services/*": ["src/services/*"],
             "@styles/*": ["src/styles/*"],
