--- a/ChitChat.Frontend/package.json
+++ b/ChitChat.Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.8",
+    "firebase": "^10.7.1",
     "graphql": "^16.8.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
