--- a/ChitChat.Frontend/tsconfig.json
+++ b/ChitChat.Frontend/tsconfig.json
@@ -26,8 +26,8 @@
             "@consts/*": ["src/consts/*"],
             "@containers/*": ["src/containers/*"],
             "@graphql/*": ["src/graphql/*"],
+            "@hooks/*": ["src/hooks/*"],
             "@pages/*": ["src/pages/*"],
-            "@services/*": ["src/services/*"],
             "@styles/*": ["src/styles/*"],
             "@utils/*": ["src/utils/*"]
         }
