--- a/ChitChat.Backend/ChitChat.Chat/package.json
+++ b/ChitChat.Backend/ChitChat.Chat/package.json
@@ -19,6 +19,7 @@
 	"dependencies": {
 		"@apollo/server": "^4.9.5",
 		"@graphql-tools/utils": "^10.0.12",
+		"amqplib": "^0.10.3",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"firebase-admin": "^12.0.0",
@@ -27,6 +28,7 @@
 		"winston-daily-rotate-file": "^4.7.1"
 	},
 	"devDependencies": {
+		"@types/amqplib": "^0.10.4",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.10.6",
