--- a/ChitChat.Backend/ChitChat.Chat/.env.example
+++ b/ChitChat.Backend/ChitChat.Chat/.env.example
@@ -1,5 +1,7 @@
 # Host
-PORT=4000
+PORT=4001
+WS_PATH=graphql
+CLIENTS=http://localhost:4001,http://localhost:5173,http://localhost:4200,http://localhost:8000
 
 # RabbitMQ
 RABBITMQ_HOST=localhost
