--- a/ChitChat.Backend/ChitChat.Chat/package.json
+++ b/ChitChat.Backend/ChitChat.Chat/package.json
@@ -24,15 +24,19 @@
 		"express": "^4.18.2",
 		"firebase-admin": "^12.0.0",
 		"graphql": "^16.8.1",
+		"graphql-subscriptions": "^2.0.0",
+		"graphql-ws": "^5.14.3",
 		"moment": "^2.30.1",
 		"winston": "^3.11.0",
-		"winston-daily-rotate-file": "^4.7.1"
+		"winston-daily-rotate-file": "^4.7.1",
+		"ws": "^8.16.0"
 	},
 	"devDependencies": {
 		"@types/amqplib": "^0.10.4",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.10.6",
+		"@types/ws": "^8.5.10",
 		"typescript": "^5.3.3"
 	}
 }
