--- a/ChitChat.Backend/ChitChat.Users/.env.example
+++ b/ChitChat.Backend/ChitChat.Users/.env.example
@@ -1,5 +1,6 @@
 # Host
 PORT=4000
+CLIENTS=http://localhost:4000,http://localhost:5173,http://localhost:4200,http://localhost:8000
 
 # RabbitMQ
 RABBITMQ_HOST=localhost
