add getAllChats query

--- a/ChitChat.Frontend/tsconfig.json
+++ b/ChitChat.Frontend/tsconfig.json
@@ -28,6 +28,7 @@
             "@_firebase/*": ["src/firebase/*"],
             "@graphql/*": ["src/graphql/*"],
             "@hooks/*": ["src/hooks/*"],
+            "@models/*": ["src/models/*"],
             "@pages/*": ["src/pages/*"],
             "@styles/*": ["src/styles/*"],
             "@_types/*": ["src/types/*"],
