add create chat and subscribe to query

--- a/ChitChat.Frontend/tsconfig.json
+++ b/ChitChat.Frontend/tsconfig.json
@@ -22,6 +22,7 @@
 
         "baseUrl": ".",
         "paths": {
+            "@_apollo/*": ["src/apollo/*"],
             "@consts/*": ["src/common/consts/*"],
             "@models/*": ["src/common/models/*"],
             "@_types/*": ["src/common/types/*"],
