--- a/ChitChat.Frontend/package.json
+++ b/ChitChat.Frontend/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.8.8",
     "firebase": "^10.7.1",
     "graphql": "^16.8.1",
+    "graphql-ws": "^5.14.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.30.1",
